--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FireBaseDatabase</string>
+    <string name="btn_salles">Récupérer salles</string>
+    <string name="btn_parcours">Récupérer parcours</string>
 </resources>
