--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">FireBaseDatabase</string>
-    <string name="btn_salles">Récupérer salles</string>
-    <string name="btn_parcours">Récupérer parcours</string>
+    <string name="btn_cnam31">Récupérer salles et mouvements</string>
 </resources>
