ajout du menu dynamique de sélection de batiments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FireBaseDatabase</string>
     <string name="btn_cnam31">Récupérer salles et mouvements</string>
+    <string name="tv_main">Sélectionner un bâtiment via le menu</string>
 </resources>
